# yreport

./: .gitignore  README.md  pyproject.toml  release.yml  requirements-dev.txt
.github/workflows/: ci.yml  release.yml
examples/: demo.py  titanic_report.json  titanic_report.md
tests/: test_data_health.py  test_extended.py  test_sklearn_inspector.py
yreport/: __init__.py  health.py  recommend.py  report.py  sklearn.py  types.py
