[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "yreport"
version = "0.1.0"
description = "Dataset-agnostic data health report for tabular datasets"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Yogesh Kardile" }
]
dependencies = [
    "pandas>=1.5",
    "numpy>=1.21",
    "scipy"
]
