[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "yreport"
version = "0.1.0"
description = "Dataset-agnostic data health report for tabular datasets"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Yogesh Kardile" , email = "kardile.work@gmail.com" }
]
dependencies = [
    "pandas>=1.5",
    "numpy>=1.21",
    "scipy",
    "scikit-learn"
]

[tool.setuptools.packages.find]
where = ["."]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
license = {text = "MIT"}
readme = "README.md"


[project.urls]
Homepage = "https://github.com/Yogesh942134/yreport"
Repository = "https://github.com/Yogesh942134/yreport"